--- a/SpaceTrader/app/src/main/res/layout/market_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/market_screen.xml
@@ -430,6 +430,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="48dp" />
+
             </TableRow>
 
             <android.support.constraint.Group
@@ -1194,9 +1195,39 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Complete Transaction"
-        app:layout_constraintTop_toBottomOf="@id/scrollView2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.883"
+        app:layout_constraintStart_toEndOf="@id/currentMoney"
+        app:layout_constraintTop_toBottomOf="@id/scrollView2"
+        app:layout_constraintVertical_bias="0.545" />
+
+    <TextView
+        android:id="@+id/currentMoneyHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Total Currency:"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:height="48dp"
+        android:gravity="center"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/currentMoney"
+        app:layout_constraintTop_toTopOf="@id/completeTransaction"
+        app:layout_constraintBottom_toBottomOf="@id/completeTransaction"/>
+
+    <TextView
+        android:id="@+id/currentMoney"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1000"
+        android:height="48dp"
+        android:gravity="center"
+        android:textSize="20dp"
+        app:layout_constraintStart_toEndOf="@id/currentMoneyHeader"
+        app:layout_constraintEnd_toStartOf="@id/completeTransaction"
+        app:layout_constraintTop_toTopOf="@id/completeTransaction"
+        app:layout_constraintBottom_toBottomOf="@id/completeTransaction"/>
 
 </android.support.constraint.ConstraintLayout>
