--- a/SpaceTrader/app/src/main/res/layout/market_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/market_screen.xml
@@ -35,7 +35,8 @@
         app:layout_constraintEnd_toStartOf="@+id/holdSpaceHeader"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/marketHeader"
-        app:layout_constraintVertical_bias="0.317" />
+        app:layout_constraintVertical_bias="0.317"
+        android:onClick="onBuyModePressed"/>
 
     <Button
         android:id="@+id/sellMode"
@@ -48,7 +49,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/holdSpace"
         app:layout_constraintTop_toTopOf="@+id/buyMode"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:onClick="onSellModePressed"/>
 
     <TextView
         android:id="@+id/holdSpaceHeader"
@@ -197,6 +199,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -306,6 +309,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -415,6 +419,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -525,6 +530,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -634,6 +640,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -743,6 +750,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -852,6 +860,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -961,6 +970,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -1070,6 +1080,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -1179,6 +1190,7 @@
                     android:ems="4"
                     android:gravity="center"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:text="0"
                     android:textSize="20dp" />
 
@@ -1200,7 +1212,8 @@
         app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toEndOf="@id/currentMoney"
         app:layout_constraintTop_toBottomOf="@id/scrollView2"
-        app:layout_constraintVertical_bias="0.545" />
+        app:layout_constraintVertical_bias="0.545"
+        android:onClick="onCompleteTransactionPressed"/>
 
     <TextView
         android:id="@+id/currentMoneyHeader"
