adds planet screen, also makes techLevel and Resource enums/simplifies random generation
sorry i should have separated this in 2 commits rip

--- a/SpaceTrader/app/src/main/res/layout/planet_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/planet_screen.xml
@@ -8,19 +8,69 @@
         tools:context="edu.gatech.cs2340.SpaceTrader.views.PlanetScreen">
 
         <TextView
-        android:id="@+id/nameText"
+        android:id="@+id/planetText"
         android:layout_width="227dp"
         android:layout_height="54dp"
-        android:text="Default Planet Name"
+        android:gravity="center"
+        android:text="Planet Name"
         android:textColor="@color/design_default_color_primary"
-        android:textSize="36sp"
+            android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.096" />
+        app:layout_constraintVertical_bias="0.113" />
+
+    <TextView
+        android:id="@+id/solarSystemText"
+        android:layout_width="285dp"
+        android:layout_height="53dp"
+        android:gravity="center"
+        android:text="Solar System Name"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.193" />
+
+    <TextView
+        android:id="@+id/rssText"
+        android:layout_width="290dp"
+        android:layout_height="60dp"
+        android:gravity="center"
+        android:text="Resources: Default"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.323" />
+
+    <TextView
+        android:id="@+id/techLevelText"
+        android:layout_width="285dp"
+        android:layout_height="64dp"
+        android:gravity="center"
+        android:text="Tech Level: Default"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.433" />
 
     <Button
         android:id="@+id/toMarket"
