--- a/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
+++ b/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
@@ -7,4 +7,20 @@
     android:layout_height="match_parent"
     tools:context="edu.gatech.cs2340.SpaceTrader.views.SolarSystemMap">
 
+    <TextView
+        android:id="@+id/solarSystemText"
+        android:layout_width="285dp"
+        android:layout_height="53dp"
+        android:gravity="center"
+        android:text="Solar System Name"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.193" />
+
 </android.support.constraint.ConstraintLayout>
