displays current location and fuel on universe and solar map, disables travel to locations too far away

--- a/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
+++ b/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
@@ -10,19 +10,51 @@
 
     <TextView
         android:id="@+id/solarSystemText"
-        android:layout_width="333dp"
-        android:layout_height="50dp"
+        android:layout_width="331dp"
+        android:layout_height="35dp"
         android:gravity="center"
         android:text="Solar System Name"
         android:textColor="@color/design_default_color_primary"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064" />
+        app:layout_constraintVertical_bias="0.023" />
+
+    <TextView
+        android:id="@+id/locationText"
+        android:layout_width="389dp"
+        android:layout_height="32dp"
+        android:gravity="center"
+        android:text="Current Location: None, None"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.072" />
+
+    <TextView
+        android:id="@+id/fuelText"
+        android:layout_width="389dp"
+        android:layout_height="35dp"
+        android:gravity="center"
+        android:text="Current Available Fuel: XXXX"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.119" />
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/solarSystem_graph"
