--- a/SpaceTrader/app/src/main/res/layout/planet_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/planet_screen.xml
@@ -110,6 +110,5 @@
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421"
-        android:contentDescription="TODO" />
+        app:layout_constraintVertical_bias="0.421" />
 </android.support.constraint.ConstraintLayout>
