--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -110,8 +110,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="fitXY"
-        android:layout_gravity="center"
-        android:contentDescription="TODO" />
+        android:layout_gravity="center" />
 
     <ImageButton
         android:id="@+id/pilot_button_down"
