--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -33,7 +33,8 @@
         android:layout_below="@id/name_header"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:labelFor="@id/player_name_input"/>
+        android:labelFor="@id/player_name_input"
+        android:autofillHints="" />
 
     <TextView
         android:text="@string/name_header"
@@ -58,10 +59,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="250dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginRight="250dp"
         android:layout_marginBottom="30dp"
         android:onClick="onAddPressed"
         android:text="Add" />
@@ -71,10 +72,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="250dp"
-        android:layout_marginRight="250dp"
+        android:layout_marginLeft="250dp"
         android:layout_marginBottom="27dp"
         android:onClick="onCancelPressed"
         android:text="Cancel" />
