--- a/SpaceTrader/app/src/main/res/layout/market_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/market_screen.xml
@@ -12,7 +12,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
-        android:text="Default"
+        android:text="@string/default_word"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,10 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Buy Mode"
+        android:text="@string/buyMode"
         app:layout_constraintBottom_toTopOf="@+id/scrollView1"
         app:layout_constraintEnd_toStartOf="@+id/holdSpaceHeader"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Sell Mode"
+        android:text="@string/sellMode"
         app:layout_constraintBottom_toBottomOf="@+id/buyMode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/holdSpace"
@@ -61,7 +59,7 @@
         android:layout_height="wrap_content"
         android:height="48dp"
         android:gravity="center"
-        android:text="Free Space:"
+        android:text="@string/freespace"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/buyMode"
         app:layout_constraintEnd_toStartOf="@id/holdSpace"
@@ -76,7 +74,7 @@
         android:layout_height="wrap_content"
         android:height="48dp"
         android:gravity="center"
-        android:text="0"
+        android:text="@string/zero"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/sellMode"
         app:layout_constraintEnd_toStartOf="@+id/sellMode"
@@ -120,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Complete Transaction"
+        android:text="@string/CompleteTrans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.883"
@@ -133,9 +131,8 @@
         android:id="@+id/currentMoneyHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Total Currency:"
+        android:text="@string/money"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:height="48dp"
         android:gravity="center"
         android:textSize="20sp"
@@ -148,7 +145,7 @@
         android:id="@+id/currentMoney"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:text="@string/zero"
         android:height="48dp"
         android:gravity="center"
         android:textSize="20sp"
