--- a/SpaceTrader/app/src/main/res/layout/random_event_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/random_event_screen.xml
@@ -12,7 +12,7 @@
         android:layout_width="327dp"
         android:layout_height="544dp"
         android:gravity="center"
-        android:text="Random Event Text"
+        android:text="@string/RandEventText"
         android:textColor="@color/design_default_color_primary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:layout_width="231dp"
         android:layout_height="85dp"
         android:gravity="center"
-        android:text="Random Event Title"
+        android:text="@string/RandomEventTitle"
         android:textColor="@color/design_default_color_primary"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Continue"
+        android:text="@string/cont"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
