--- a/SpaceTrader/app/src/main/res/layout/universe_map.xml
+++ b/SpaceTrader/app/src/main/res/layout/universe_map.xml
@@ -98,7 +98,7 @@
         android:layout_width="291dp"
         android:layout_height="42dp"
         android:gravity="center"
-        android:text="Universe Map"
+        android:text="@string/uniMap"
         android:textColor="@color/design_default_color_primary"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/locationText"
@@ -116,7 +116,7 @@
         android:layout_width="389dp"
         android:layout_height="32dp"
         android:gravity="center"
-        android:text="Current Location: None, None"
+        android:text="@string/currentLocation"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/fuelText"
@@ -133,7 +133,7 @@
         android:layout_width="389dp"
         android:layout_height="32dp"
         android:gravity="center"
-        android:text="Current Available Fuel: XXXX"
+        android:text="@string/currentFuel"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/universe_graph"
@@ -163,9 +163,8 @@
         android:layout_width="119dp"
         android:layout_height="55dp"
         android:layout_marginEnd="144dp"
-        android:layout_marginRight="144dp"
         android:layout_marginBottom="24dp"
-        android:text="Travel"
+        android:text="@string/travel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
