--- a/SpaceTrader/app/src/main/res/layout/activity_main.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/textView"
         android:layout_width="227dp"
         android:layout_height="54dp"
-        android:text="Space Trader"
+        android:text="@string/game_name"
         android:textColor="@color/design_default_color_primary"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,9 +26,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
-        android:layout_marginLeft="128dp"
         android:layout_marginTop="196dp"
-        android:text="Ready Player One"
+        android:text="@string/start_game"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -37,11 +36,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="144dp"
-        android:layout_marginLeft="144dp"
         android:layout_marginTop="124dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="Watersgate"
+        android:text="@string/team_name"
         android:textColor="@color/design_default_color_primary"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
