--- a/SpaceTrader/app/src/main/res/layout/activity_player_confirm.xml
+++ b/SpaceTrader/app/src/main/res/layout/activity_player_confirm.xml
@@ -12,8 +12,7 @@
         android:layout_width="119dp"
         android:layout_height="49dp"
         android:layout_marginEnd="144dp"
-        android:layout_marginRight="144dp"
-        android:text="Profile"
+        android:text="@string/profile"
         android:textColor="@color/design_default_color_primary"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,7 +26,6 @@
         android:layout_width="228dp"
         android:layout_height="26dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginRight="124dp"
         android:text="@string/player_name_blank"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
@@ -42,7 +40,6 @@
         android:layout_width="228dp"
         android:layout_height="28dp"
         android:layout_marginEnd="124dp"
-        android:layout_marginRight="124dp"
         android:text="@string/difficultyText_blank"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
@@ -129,8 +126,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="144dp"
-        android:layout_marginRight="144dp"
-        android:text="Go To Game"
+        android:text="@string/go_to_game"
         android:textColor="@color/design_default_color_primary"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
