--- a/SpaceTrader/app/src/main/res/layout/content_create_player.xml
+++ b/SpaceTrader/app/src/main/res/layout/content_create_player.xml
@@ -18,7 +18,6 @@
         android:id="@+id/difficulty_header"
         android:layout_below="@id/player_name_input"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginTop="38dp" />
 
 
@@ -32,9 +31,8 @@
         android:layout_marginTop="32dp"
         android:layout_below="@id/name_header"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:labelFor="@id/player_name_input"
-        android:autofillHints="" />
+        android:autofillHints=""/>
 
     <TextView
         android:text="@string/name_header"
@@ -42,7 +40,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/name_header"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginTop="32dp" />
 
     <Spinner
@@ -50,7 +47,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/difficulty_header"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_marginTop="32dp"
         android:id="@+id/difficulty_spinner" />
 
@@ -59,48 +55,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="250dp"
-        android:layout_marginRight="250dp"
+        android:layout_marginEnd="250dp"
         android:layout_marginBottom="30dp"
         android:onClick="onAddPressed"
-        android:text="Add" />
+        android:text="@string/add" />
 
     <Button
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="250dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginStart="250dp"
         android:layout_marginBottom="27dp"
         android:onClick="onCancelPressed"
-        android:text="Cancel" />
+        android:text="@string/Cancel" />
 
     <TextView
         android:id="@+id/pilot_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="34dp"
-        android:layout_marginLeft="34dp"
         android:layout_marginTop="344dp"
         android:text="@string/skill1" />
 
-    <TextView
+    <EditText
         android:id="@+id/pilot_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/pilot_header"
-        android:layout_toRightOf="@+id/pilot_header"
+        android:layout_toEndOf="@+id/pilot_header"
         android:ems="2"
         android:inputType="number"
-        android:layout_toEndOf="@+id/pilot_header" />
+        android:autofillHints=""/>
 
 
     <ImageButton
@@ -113,11 +107,11 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="pilot button up" />
+        android:contentDescription="@string/pilot_button_up" />
 
     <ImageButton
         android:id="@+id/pilot_button_down"
-        android:layout_toRightOf="@+id/pilot_button_up"
+        android:layout_toEndOf="@+id/pilot_button_up"
         android:layout_alignTop="@+id/pilot_button_up"
         android:onClick="onPilotDownPressed"
         android:background="@android:color/background_light"
@@ -126,7 +120,7 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="pilot button down" />
+        android:contentDescription="@string/pilot_down" />
 
 
     <TextView
@@ -135,20 +129,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="129dp"
-        android:layout_marginLeft="129dp"
         android:layout_marginTop="344dp"
         android:layout_toEndOf="@+id/pilot_points"
-        android:layout_toRightOf="@+id/pilot_points"
         android:text="@string/skill2" />
 
-    <TextView
+    <EditText
         android:id="@+id/fighter_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/fighter_header"
-        android:layout_toRightOf="@+id/fighter_header"
+        android:layout_toEndOf="@+id/fighter_header"
         android:ems="2"
         android:inputType="number"
+        android:autofillHints=""
         />
 
 
@@ -156,9 +149,7 @@
         android:id="@+id/fighter_button_up"
         android:layout_below="@+id/fighter_header"
         android:layout_alignStart="@+id/pilot_button_up"
-        android:layout_alignLeft="@+id/pilot_button_up"
         android:layout_marginStart="196dp"
-        android:layout_marginLeft="196dp"
         android:layout_marginTop="0dp"
         android:onClick="onFighterUpPressed"
         android:background="@android:color/background_light"
@@ -167,11 +158,11 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="fighter button up" />
+        android:contentDescription="@string/fighter_up" />
 
     <ImageButton
         android:id="@+id/fighter_button_down"
-        android:layout_toRightOf="@+id/fighter_button_up"
+        android:layout_toEndOf="@+id/fighter_button_up"
         android:layout_alignTop="@+id/fighter_button_up"
         android:onClick="onFighterDownPressed"
         android:background="@android:color/background_light"
@@ -180,28 +171,27 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="fighter button down" />
+        android:contentDescription="@string/fighter_down" />
 
     <TextView
         android:id="@+id/trader_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="442dp"
         android:text="@string/skill3" />
 
-    <TextView
+    <EditText
         android:id="@+id/trader_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/trader_header"
-        android:layout_toRightOf="@+id/trader_header"
+        android:layout_toEndOf="@+id/trader_header"
         android:ems="2"
         android:inputType="number"
+        android:autofillHints=""
         />
 
 
@@ -215,11 +205,11 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="trader button up" />
+        android:contentDescription="@string/trader_up" />
 
     <ImageButton
         android:id="@+id/trader_button_down"
-        android:layout_toRightOf="@+id/trader_button_up"
+        android:layout_toEndOf="@+id/trader_button_up"
         android:layout_alignTop="@+id/trader_button_up"
         android:onClick="onTraderDownPressed"
         android:background="@android:color/background_light"
@@ -228,7 +218,7 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="trader button down" />
+        android:contentDescription="@string/trader_down"/>
 
     <TextView
         android:id="@+id/engineer_header"
@@ -236,20 +226,19 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="115dp"
-        android:layout_marginLeft="115dp"
         android:layout_marginTop="442dp"
         android:layout_toEndOf="@+id/trader_points"
-        android:layout_toRightOf="@+id/trader_points"
         android:text="@string/skill4" />
 
-    <TextView
+    <EditText
         android:id="@+id/engineer_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/engineer_header"
-        android:layout_toRightOf="@+id/engineer_header"
+        android:layout_toEndOf="@+id/engineer_header"
         android:ems="2"
         android:inputType="number"
+        android:autofillHints=""
         />
 
 
@@ -257,9 +246,7 @@
         android:id="@+id/engineer_button_up"
         android:layout_below="@+id/engineer_header"
         android:layout_alignStart="@+id/trader_button_up"
-        android:layout_alignLeft="@+id/trader_button_up"
         android:layout_marginStart="196dp"
-        android:layout_marginLeft="196dp"
         android:layout_marginTop="0dp"
         android:onClick="onEngineerUpPressed"
         android:background="@android:color/background_light"
@@ -268,11 +255,11 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="engineer button up" />
+        android:contentDescription="@string/engineer_up" />
 
     <ImageButton
         android:id="@+id/engineer_button_down"
-        android:layout_toRightOf="@+id/engineer_button_up"
+        android:layout_toEndOf="@+id/engineer_button_up"
         android:layout_alignTop="@+id/engineer_button_up"
         android:onClick="onEngineerDownPressed"
         android:background="@android:color/background_light"
@@ -281,28 +268,27 @@
         android:layout_height="50dp"
         android:scaleType="fitXY"
         android:layout_gravity="center"
-        android:contentDescription="engineer button down" />
+        android:contentDescription="@string/engineer_down" />
 
     <TextView
         android:id="@+id/remaining_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="118dp"
-        android:layout_marginLeft="118dp"
         android:layout_marginTop="298dp"
         android:text="@string/remaining" />
 
-    <TextView
+    <EditText
         android:id="@+id/remaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/remaining_header"
-        android:layout_toRightOf="@+id/remaining_header"
+        android:layout_toEndOf="@+id/remaining_header"
         android:ems="2"
         android:inputType="number"
+        android:autofillHints=""
         />
 
 
