--- a/SpaceTrader/app/src/main/res/layout/planet_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/planet_screen.xml
@@ -12,7 +12,7 @@
         android:layout_width="227dp"
         android:layout_height="54dp"
         android:gravity="center"
-        android:text="Planet Name"
+        android:text="@string/planetName"
         android:textColor="@color/design_default_color_primary"
             android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
         android:layout_width="285dp"
         android:layout_height="53dp"
         android:gravity="center"
-        android:text="Solar System Name"
+        android:text="@string/SSName"
         android:textColor="@color/design_default_color_primary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
         android:layout_width="290dp"
         android:layout_height="60dp"
         android:gravity="center"
-        android:text="Resources: Default"
+        android:text="@string/resourcesDef"
         android:textColor="@color/design_default_color_primary"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +61,7 @@
         android:layout_width="285dp"
         android:layout_height="64dp"
         android:gravity="center"
-        android:text="Tech Level: Default"
+        android:text="@string/techDef"
         android:textColor="@color/design_default_color_primary"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="To Market"
+        android:text="@string/toMarket"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.869"
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Refuel"
+        android:text="@string/refuel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.166"
@@ -111,5 +111,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.421"
-        android:contentDescription="image of planet" />
+        android:contentDescription="@string/planetImage" />
 </android.support.constraint.ConstraintLayout>
