--- a/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
+++ b/SpaceTrader/app/src/main/res/layout/solarsystem_map.xml
@@ -13,7 +13,7 @@
         android:layout_width="331dp"
         android:layout_height="35dp"
         android:gravity="center"
-        android:text="Solar System Name"
+        android:text="@string/SSName"
         android:textColor="@color/design_default_color_primary"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +29,7 @@
         android:layout_width="389dp"
         android:layout_height="32dp"
         android:gravity="center"
-        android:text="Current Location: None, None"
+        android:text="@string/currentLocation"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +45,7 @@
         android:layout_width="389dp"
         android:layout_height="35dp"
         android:gravity="center"
-        android:text="Current Available Fuel: XXXX"
+        android:text="@string/currentFuel"
         android:textColor="@color/design_default_color_primary"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -91,7 +91,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Travel"
+        android:text="@string/travel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
