--- a/SpaceTrader/app/src/main/res/layout/three_choice_minigame_screen.xml
+++ b/SpaceTrader/app/src/main/res/layout/three_choice_minigame_screen.xml
@@ -12,7 +12,10 @@
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
+        android:gravity="center"
+        android:text="@string/RandomEventTitle"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +30,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="TextView"
+        android:gravity="center"
+        android:text="@string/RandEventText"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
